# julia

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
base/: Base.jl  CMakeLists.txt  asyncevent.jl  binaryplatforms.jl  build_h.jl.in  exports.jl  external_libnames.jl  file.jl  filesystem.jl  gmp.jl  irrationals.jl  libc.jl  libdl.jl  libuv.jl  linking.jl  mpfr.jl  path.jl  pcre.jl  process.jl  stream.jl  sysinfo.jl  version_git.jl.in
base/docs/: basedocs.jl
base/strings/: unicode.jl
cli/: CMakeLists.txt  jl_exports.h  loader.h  loader_exe.c  loader_lib.c  loader_win_utils.c
cmake/: deps-setup.cmake  errno_h_jl.cmake  features_h_jl.cmake  file_constants_jl.cmake  general-setup.cmake  options-platform.cmake  options.cmake  pcre_h_jl.cmake  platform-setup.cmake  preprocessor.cmake  select-default-toolchain.cmake  tail.cmake  utility.cmake
cmake/gen-file-examples/: errno_h.jl  file_constants.jl  pcre_h.jl  uv_constants.jl
contrib/: generate_precompile.jl  julia-config.jl
src/: CMakeLists.txt  aotcompile.cpp  ccall.cpp  cgutils.cpp  codegen.cpp  dlload.c  gc-heap-snapshot.cpp  gc.c  gc.h  init.c  interpreter.c  intrinsics.cpp  jitlayers.cpp  jl_uv.c  jloptions.c  jltypes.c  julia.h  julia_internal.h  julia_version.h.in  llvm-codegen-shared.h  llvm-multiversioning.cpp  llvm_api.cpp  partr.c  pipeline.cpp  processor.h  processor_fallback.cpp  processor_x86.cpp  signal-handling.c  staticdata.c  task.c  uv_constants.h  win32_ucontext.c
src/flisp/: CMakeLists.txt  flisp.c
src/support/: CMakeLists.txt  dtypes.h  platform.h
stdlib/: CMakeLists.txt
stdlib/CompilerSupportLibraries_jll/src/: CompilerSupportLibraries_jll.jl
stdlib/FileWatching/src/: FileWatching.jl  pidfile.jl
stdlib/FileWatching/test/: runtests.jl
stdlib/GMP_jll/src/: GMP_jll.jl
stdlib/LibCURL_jll/src/: LibCURL_jll.jl
stdlib/LibCURL_jll/test/: runtests.jl
stdlib/LibGit2/src/: LibGit2.jl  blame.jl  blob.jl  callbacks.jl  commit.jl  config.jl  diff.jl  error.jl  index.jl  merge.jl  oid.jl  rebase.jl  reference.jl  remote.jl  repository.jl  signature.jl  status.jl  tag.jl  tree.jl  types.jl  utils.jl  walker.jl
stdlib/LibGit2/test/: libgit2-tests.jl
stdlib/LibGit2_jll/src/: LibGit2_jll.jl
stdlib/LibGit2_jll/test/: runtests.jl
stdlib/LibSSH2_jll/src/: LibSSH2_jll.jl
stdlib/LibUV_jll/src/: LibUV_jll.jl
stdlib/LibUV_jll/test/: runtests.jl
stdlib/LibUnwind_jll/src/: LibUnwind_jll.jl
stdlib/LinearAlgebra/src/: LinearAlgebra.jl  blas.jl  lapack.jl
stdlib/MPFR_jll/src/: MPFR_jll.jl
stdlib/MPFR_jll/test/: runtests.jl
stdlib/MbedTLS_jll/src/: MbedTLS_jll.jl
stdlib/OpenBLAS_jll/src/: OpenBLAS_jll.jl
stdlib/OpenLibm_jll/src/: OpenLibm_jll.jl
stdlib/PCRE2_jll/src/: PCRE2_jll.jl
stdlib/PCRE2_jll/test/: runtests.jl
stdlib/Printf/src/: Printf.jl
stdlib/Random/src/: DSFMT.jl  generation.jl
stdlib/Sockets/src/: PipeServer.jl  Sockets.jl  addrinfo.jl
stdlib/Sockets/test/: runtests.jl
stdlib/SuiteSparse_jll/src/: SuiteSparse_jll.jl
stdlib/Zlib_jll/src/: Zlib_jll.jl
stdlib/dSFMT_jll/src/: dSFMT_jll.jl
stdlib/dSFMT_jll/test/: runtests.jl
stdlib/libblastrampoline_jll/src/: libblastrampoline_jll.jl
stdlib/nghttp2_jll/src/: nghttp2_jll.jl
test/: CMakeLists.txt  binaryplatforms.jl  ccall.jl  channels.jl  print_process_affinity.jl  spawn.jl  threads.jl  threads_exec.jl
